# CalDisplay

./: .gitignore  CMakeLists.txt  README.md
deploy/: caldisplay-app.desktop  caldisplay-kiosk.desktop  caldisplay.desktop  caldisplay.service
docs/: ARCHITECTURE.md
qml/: main.qml
scripts/: install-lubuntu-kiosk.sh
snap/: snapcraft.yaml
src/: accountmanager.cpp  accountmanager.h  eventmodel.cpp  eventmodel.h  feedmanager.cpp  feedmanager.h  main.cpp  weathermanager.cpp  weathermanager.h
